--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -1,8 +1,65 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="250dp"
+    android:orientation="horizontal">
+<LinearLayout
+    android:layout_width="100dp"
     android:layout_height="match_parent">
-
-
-
+    <ImageButton
+        android:id="@+id/previous"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="35dp"
+        android:layout_gravity="center"
+        />
+    
 </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="165dp"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/Recommend_IMG"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="34dp"
+            android:layout_gravity="center">
+
+        </ImageView>
+    </LinearLayout>
+    
+    <LinearLayout
+        android:layout_width="100dp"
+        android:layout_height="match_parent">
+    <ImageButton
+        android:id="@+id/next"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_gravity="center"
+        />
+</LinearLayout>
+        
+        
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+
+
+
+
+    </LinearLayout>
+   
+   
+</LinearLayout>
+
