--- a/app/src/main/res/layout/activity_croplist.xml
+++ b/app/src/main/res/layout/activity_croplist.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<!--작물정보리스트 리사이클러뷰-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/RV1"
         android:layout_width="match_parent"
