--- a/app/src/main/res/layout/activity_recommend.xml
+++ b/app/src/main/res/layout/activity_recommend.xml
@@ -1,8 +1,257 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="250dp"
+        android:layout_gravity="center"
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:id="@+id/previous"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="35dp"
+                android:background="@drawable/left"
+                android:layout_gravity="center"
+                />
 
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="165dp"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+            <ImageView
+                android:id="@+id/Recommend_IMG"
+                android:background="@drawable/c"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginLeft="34dp"
+                android:layout_gravity="center">
+
+            </ImageView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="match_parent">
+            <ImageButton
+                android:id="@+id/next"
+                android:background="@drawable/right"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="center"
+                />
+
+        </LinearLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/darker_gray" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingTop="15dp"
+        android:orientation="vertical">
+        <!--재배최적조건테이블-->
+        <TextView
+            android:gravity="center|left"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:textSize="26sp"
+            android:text="재배 최적 조건"/>
+        <TableLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#000000"
+            android:padding="1dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:background="#777777"
+                android:gravity="center_horizontal"
+                android:text="온도"
+                android:textSize="26sp" />
+
+            <TextView
+                android:layout_width="135dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:background="#777777"
+                android:gravity="center_horizontal"
+                android:text="습도(%)"
+                android:textSize="26sp" />
+
+            <TextView
+                android:id="@+id/BestAcid"
+                android:layout_width="124dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:background="#777777"
+                android:gravity="center_horizontal"
+                android:text="산도(Ph)"
+                android:textIsSelectable="true"
+                android:textSize="26sp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#000000"
+            android:padding="1dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/BestTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:text="27℃"
+                android:background="#ffffff"
+                android:textSize="26sp"
+                android:gravity="center_horizontal"
+                />
+            <TextView
+                android:id="@+id/BestHumid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:text="87%"
+                android:background="#ffffff"
+                android:textSize="26sp"
+                android:gravity="center_horizontal"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:text="6.4Ph"
+                android:background="#ffffff"
+                android:textSize="26sp"
+                android:gravity="center_horizontal"
+                />
+
+        </TableRow>
+
+
+        </TableLayout>
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingTop="40dp">
+    <!--선택지역토양상태-->
+    <TextView
+        android:gravity="center|left"
+
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:textSize="26sp"
+        android:text="선택 지역 토양 상태"/>
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#000000"
+            android:padding="1dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:background="#777777"
+                android:gravity="center_horizontal"
+                android:text="토양성분"
+                android:textSize="26sp" />
+
+            <TextView
+                android:layout_width="135dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:background="#777777"
+                android:gravity="center_horizontal"
+                android:text="습도(%)"
+                android:textSize="26sp" />
+
+            <TextView
+                android:layout_width="124dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:background="#777777"
+                android:gravity="center_horizontal"
+                android:text="산도(Ph)"
+                android:textIsSelectable="true"
+                android:textSize="26sp" />
+        </TableRow>
+
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#000000"
+            android:padding="1dp"
+            android:orientation="vertical">
+
+            <!--선택지역토양상태 중 토양성분-->
+            <TextView
+                android:id="@+id/SoilType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:text="부엽토"
+                android:background="#ffffff"
+                android:textSize="26sp"
+                android:gravity="center_horizontal"
+                />
+            <!--선택지역토양상태 중 습도-->
+            <TextView
+                android:id="@+id/LocalHumid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:text="83%"
+                android:background="#ffffff"
+                android:textSize="26sp"
+                android:gravity="center_horizontal"
+                />
+
+            <!--선택지역토양상태 중 산도-->
+            <TextView
+                android:id="@+id/LocalAcid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="1dp"
+                android:text="4.4Ph"
+                android:background="#ffffff"
+                android:textSize="26sp"
+                android:gravity="center_horizontal"
+                />
+
+        </TableRow>
+
+
+    </TableLayout>
+
+</LinearLayout>
+
+    </LinearLayout>
 
 
 </LinearLayout>
